<resources>
    <string name="app_name">FinFun</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">User_id@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_play">Play Game</string>
    <string name="menu_leader_board">Leader Board</string>
    <string name="menu_achievement">Achievements</string>
    <string name="contact_us">Contact Us</string>
    <string name="peer_chat">Peer Chat</string>
    <string name="communicate">Communicate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">level 3</string>
</resources>