<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_play">

    <fragment
        android:id="@+id/nav_play"
        android:name="com.example.finfun.ui.play.PlayFragment"
        android:label="@string/menu_play"
        tools:layout="@layout/fragment_play" />

    <fragment
        android:id="@+id/nav_leader_board"
        android:name="com.example.finfun.ui.leader_board.LeaderBoardFragment"
        android:label="@string/menu_leader_board"
        tools:layout="@layout/fragment_leader_board" />

    <fragment
        android:id="@+id/nav_achievement"
        android:name="com.example.finfun.ui.achievement.AchievementFragment"
        android:label="@string/menu_achievement"
        tools:layout="@layout/fragment_achievement" />
</navigation>